# DuckFaceLLMTools

./: CMakeLists.txt  README.md  build.bat  setup_dependencies.bat
resources/: app.rc
src/: AgentEngine.h  AudioCapture.h  Base64.h  ConfigManager.h  ConversationManager.h  FilePicker.h  FolderPicker.h  HttpClient.cpp  HttpClient.h  LlamaServerManager.cpp  LlamaServerManager.h  Localization.h  ModelDownloader.cpp  ModelDownloader.h  PdfTextExtractor.h  SpeechToText.h  TemplateManager.h  ThemeManager.h  Tts.h  UiHelpers.h  WebSearch.h  main.cpp
